--- a/c/index.html
+++ b/c/index.html
@@ -39,7 +39,7 @@
     <article>
       <div>
         <h4 class="letterhead"><i>v1.2&mdash;2018.09</i></h4>
-        <p><i>In terms hereunder any article, graphic, motion graphic, picture, motion picture, image, video, audio, related project resource or digital representation of the material, with reference to each individual asset as well as to the project as a whole, (<font class="color">&ldquo;</font>Art<font class="color">&rdquo;</font>) produced by an original author (<font class="color">&ldquo;</font>Artist<font class="color">&rdquo;</font>) and showcased on a domain namespace managed at Animat Habitat (<font class="color">&ldquo;</font>Animat Webitat<font class="color">&rdquo;</font>), which include the official website(s) of the organization [<a href="//animathabitat.ca" target="_blank" title="Animat Habitat &ndash; Canada">animathabitat.ca</a>, <a href="//animathabitat.com" target="_blank" title="Animat Habitat commerce and communication.">animathabitat.com</a> and <a href="//animathabitat.org" target="_blank" title="Animat Habitat">animathabitat.org</a>] as well as the portfolio and project website(s) represented by founder of the organization, Dane Aleksander [<a href="//bigtuskers.com" target="_blank" title="Last of the Big Tuskers / A film by James Currie.">bigtuskers.com</a>, <s>danealeksander.ca</s>, <s>lifeasplay.ca</s>, <a href="//periwinkle.blue" target="_blank" title="&hellip;terribly patial to the periwinkle blue.">periwinkle.blue</a>]; and, the individual who, or organization on whose behalf, has browsed Animat Webitat, or who has received express permission from Artist to exercise use of copyrighted material (<font class="color">&ldquo;</font>You<font class="color">&rdquo;</font>).</i></p>
+        <p><i>In terms hereunder any article, graphic, motion graphic, picture, motion picture, image, video, audio, related project resource or digital representation of the material, with reference to each individual asset as well as to the project as a whole, (<font class="color">&ldquo;</font>Art<font class="color">&rdquo;</font>) produced by an original author (<font class="color">&ldquo;</font>Artist<font class="color">&rdquo;</font>) and showcased on a domain namespace managed at Animat Habitat (<font class="color">&ldquo;</font>Animat Habitat Web page or pages<font class="color">&rdquo;</font>), which include the official website(s) of the organization [<a href="//animathabitat.ca" target="_blank" title="Animat Habitat &ndash; Canada">animathabitat.ca</a>, <a href="//animathabitat.com" target="_blank" title="Animat Habitat commerce and communication.">animathabitat.com</a> and <a href="//animathabitat.org" target="_blank" title="Animat Habitat">animathabitat.org</a>] as well as the portfolio and project website(s) represented by founder of the organization, Dane Aleksander [<a href="//bigtuskers.com" target="_blank" title="Last of the Big Tuskers / A film by James Currie.">bigtuskers.com</a>, <s>danealeksander.ca</s>, <s>lifeasplay.ca</s>, <a href="//periwinkle.blue" target="_blank" title="&hellip;terribly patial to the periwinkle blue.">periwinkle.blue</a>]; and, the individual who, or organization on whose behalf, has browsed an Animat Habitat Web page, or who has received express permission from Artist to exercise use of copyrighted material (<font class="color">&ldquo;</font>You<font class="color">&rdquo;</font>).</i></p>
 
         <p class="linebreak lineend"><i>In the interpretation of these terms and conditions, words in the singular may include the plural and vice-versa.</i></p>
 
@@ -50,7 +50,7 @@
 
         <div>
           <ul class="lower-alpha">
-            <li>You must credit the full name of the Artist as well as include the valid back-link to Animat Webitat on every page where Art is on display;</li>
+            <li>You must credit the full name of the Artist as well as include a valid back-link to the appropriate Animat Habitat Web page on every page where Art is on display;</li>
             <li>the credit must be placed in an easy-to-see, recognizable place, so there is no confusion about the original author of Art;</li>
             <li>there must be no implication in any way that You and not Artist is the original author of Art;</li>
             <li>ownership of Art is not transfered, and remains property of Artist.</li>
@@ -76,10 +76,10 @@
         <h5 class="linebreak title" id="limitations"><b>1.2</b> Limitations of Liability</h5>
         <p>Animat Habitat will not be held responsible for any outcome that may occur during the course of usage of Art.</p>
 
-        <p class="linebreak">Third-party website(s) that are accessible by way of a link on Animat Webitat are not under the control of Animat Habitat. Animat Habitat is not responsible for the content of any linked website(s) or any link contained in any linked website(s), or any change or update to the information contained in such website(s). Links are provided only as a convenience and the inclusion of any such link on Animat Webitat does not necessarily imply an endorsement of the website, the organization operating such website, nor any product or service of that organization. You linking to any third party website(s) is entirely at your own risk.</p>
+        <p class="linebreak">A third-party website that is accessible by way of a link on any Animat Habitat Web page is not under the control of Animat Habitat. Animat Habitat is not responsible for the content of any linked website(s) or any link contained in any linked website(s), or any change or update to the information contained in such website(s). Links are provided only as a convenience and the inclusion of any such link on an Animat Habitat Web page does not necessarily imply an endorsement of the website, the organization operating such website, nor any product or service of that organization. You linking to any third-party website(s) is entirely at your own risk.</p>
 
         <h3 class="linebreak">Terms of Copyright</h3>
-        <p>Please note that Animat Webitat web pages may contain other proprietary notices and copyright information, the terms of which must be observed and followed. Unless otherwise stated, Animat Habitat reserves the copyrights and ownership rights of all Art uploaded to, and downloaded from, Animat Webitat.</p>
+        <p>Please note that an Animat Habitat Web page may contain other proprietary notices and copyright information, the terms of which must be observed and followed. Unless otherwise stated, Animat Habitat reserves the copyrights and ownership rights of all Art uploaded to, and downloaded from, Animat Habitat.</p>
 
         <h3 class="linebreak">Terms of Purchase</h3>
         <p>The gift shop at Animat Habitat has added terms and conditions: <a href="terms-of-purchase/" title="Animat Habitat terms of purchase.">Terms of Purchase</a>, <a href="terms-of-use/" title="Animat Habitat terms of use.">Terms of Use</a>.</p>
@@ -91,7 +91,7 @@
 
         <!-- <p class="linebreak"><i>Updated: September 2018. View the <a href="2015-09/" title="Animat Habitat terms of access. 1.1">previous version</a>.</i></p> -->
 
-        <p class="linebreak"><i>Terms may be updated without notice at the discretion of Animat Habitat. Access to Animat Webitat is permitted on a temporary basis; access to part or all of Animat Webitat may for any reason at any time or for any period be protected, restricted or revoked.</i></p>
+        <p class="linebreak"><i>Terms may be updated without notice at the discretion of Animat Habitat. Access to Animat Habitat Wep pages is permitted on a temporary basis. Access to part or all of Animat Habitat Web pages may for any reason at any time or for any period be protected, restricted or revoked.</i></p>
       </div>
 
     </article><br class="clear">
