--- a/c/terms-of-use/index.html
+++ b/c/terms-of-use/index.html
@@ -33,15 +33,15 @@
     <article>
       <div>
         <h4 class="letterhead"><i>v1.0&mdash;2018.09</i></h4>
-        <p class="lineend"><i>In terms hereunder any reference to &ldquo;Animat Webitat&rdquo;, &ldquo;Animat Boutique&rdquo;, &ldquo;Order&rdquo;, &ldquo;Purchaser&rdquo; and &ldquo;You&rdquo; shall be as defined in <a href="../terms-of-purchase/" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</i></p>
+        <p class="lineend"><i>In terms hereunder any reference to &ldquo;Animat Habitat Web page or pages&rdquo;, &ldquo;Animat Boutique&rdquo;, &ldquo;Order&rdquo;, &ldquo;Purchaser&rdquo; and &ldquo;You&rdquo; shall be as defined in <a href="../terms-of-purchase/" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</i></p>
 
         <pre class="thin"></pre>
 
         <h3 class="linebreak">Privacy Policy</h3>
-        <p><i>Terms hereunder extend the Cookie Policy [4.2] and Data Policy [4.4] of Animat Webitat <a href="../privacy-policy/" title="Animat Habitat terms of use.">Terms of Use</a>.</i></p>
+        <p><i>Terms hereunder extend the Cookie Policy [4.2] and Data Policy [4.4] of Animat Habitat Web pages <a href="../privacy-policy/" title="Animat Habitat terms of use.">Terms of Use</a>.</i></p>
 
         <h5 class="linebreak title" id="membership-cookies"><b>4.2.1</b> Membership Cookies</h5>
-        <p>If You have an account at Animat Webitat and You log in to Animat Boutique, Animat Boutique will set a temporary cookie to determine if the browser accepts cookies. This cookie contains no personal data and is discarded once You close the browser. If You log in, and if the browser accepts cookies, Animat Boutique will also set up several cookies to save account login information and screen display choices. Login cookies last for two (2) days, and screen options cookies last for two (2) weeks. If You select &ldquo;Remember Me&rdquo;, account login will persist for two (2) weeks. If You log out of an Animat Webitat account, the login cookies will be removed.</p>
+        <p>If You have an account at Animat Habitat and You log in to Animat Boutique, Animat Boutique will set a temporary cookie to determine if the browser accepts cookies. This cookie contains no personal data and is discarded once You close the browser. If You log in, and if the browser accepts cookies, Animat Boutique will also set up several cookies to save account login information and screen display choices. Login cookies last for two (2) days, and screen options cookies last for two (2) weeks. If You select &ldquo;Remember Me&rdquo;, account login will persist for two (2) weeks. If You log out of an Animat Habitat Web page account, the login cookies will be removed.</p>
 
         <p class="linebreak">Animat Boutique track screen display choices and collect standard account information (location, IP address and browser type) during the checkout process for the following purpose(s):</p>
 
@@ -58,7 +58,7 @@
         <p>If You register an account on Animat Boutique, membership information (username, name, e-mail address, shipping address and phone number) is stored indefinitely, or until You edit or delete any of the membership information at any time (except the username is permanent); and You are responsible for maintaining the confidentiality of the account and password, and for restricting access to the account on any computer You use; and, You agree to accept responsibility for all activities that occur under the account.</p>
 
         <!--div>
-          <p>Username and password is required to register an account at Animat Webitat;</p>
+          <p>Username and password is required to register an account at Animat Habitat;</p>
           <p>name and e-mail address is required to send account and Order information, and to respond to requests;</p>
           <p>shipping address and phone number is used to service Order fulfillment and to comply with legal obligations.</p></div-->
 
@@ -67,7 +67,7 @@
 
         <p class="linebreak">See the Animat Boutique <a href="../terms-of-purchase/" title="Animat Habitat terms of purchase.">Terms of Purchase</a> Methods of Payments [1.1] and Representation [2.1] for more details.</p>
 
-        <p class="linebreak">Animat Boutique reserves the right to refuse service, terminate accounts, remove or edit content, or cancel orders in the sole discretion of the account office at Animat Habitat. Animat Webitat administrator(s) and Animat Boutique manager(s) can see, remove and edit the information that You provide to Animat Boutique for the following purpose(s):</p>
+        <p class="linebreak">Animat Boutique reserves the right to refuse service, terminate accounts, remove or edit content, or cancel orders in the sole discretion of the account office at Animat Habitat. Animat Habitat Web administrator(s) and Animat Boutique manager(s) can see, remove and edit the information that You provide to Animat Boutique for the following purpose(s):</p>
 
         <div>
           <ul class="lower-alpha">
@@ -80,7 +80,7 @@
         <h5 class="linebreak title" id="review-data"><b>4.4.3</b> Review Data</h5>
         <p>If You have purchased from Animat Boutique, You may post a review with suggestions, ideas, comments, questions, or other information, so long as the content is not illegal, obscene, threatening, defamatory, invasive of privacy, infringing of intellectual property rights, or otherwise injurious to third parties or objectionable and does not consist of or contain software viruses, political campaigning, commercial solicitation, chain letters, mass mailings, or any form of &ldquo;spam&rdquo;. You represent and warrant that You own or otherwise control all of the rights to the content that You post; that the content is accurate; that use of the content You supply does not violate this policy and will not cause injury to any person or entity; and, that You will indemnify Animat Habitat or its associates for all claims resulting from content You supply. Animat Habitat reserves the right (and not the obligation) to remove or edit such content, but does not regularly review posted content. Animat Habitat takes no responsibility and assumes no liability for any content posted by You or any third party.</p>
 
-        <p class="linebreak lineend">If You post a review or submit material, and unless Animat Webitat indicates otherwise, You grant Animat Habitat and its associates a nonexclusive, royalty-free, perpetual, irrevocable right to use, reproduce, modify, adapt, publish, translate, create derivative works from, distribute, and display such content throughout the world in any media. You grant Animat Habitat and its associates the right to use the name that You submit in connection with such content, if appropriate.</p>
+        <p class="linebreak lineend">If You post a review or submit material, and unless an Animat Habitat Web page indicates otherwise, You grant Animat Habitat and its associates a nonexclusive, royalty-free, perpetual, irrevocable right to use, reproduce, modify, adapt, publish, translate, create derivative works from, distribute, and display such content throughout the world in any media. You grant Animat Habitat and its associates the right to use the name that You submit in connection with such content, if appropriate.</p>
 
         <pre class="thin"></pre>
 
@@ -93,7 +93,7 @@
   <footer>
     <div class="quote" id="footnotes">
       <p class="small"><sup>1</sup>&nbsp; See the PayPal <a href="../../url/c/paypal-user-agreement/" rel="noopener" target="_blank" title="PayPal User Agreement">Privacy Policy</a> for more details.</p>
-      <p class="small"><sup>2</sup>&nbsp; You can request to receive an exported document of all account information about You stored on Animat Boutique. You can also request that the account office at Animat Webitat erase all account information about You stored on Animat Boutique, however, this does not include any Animat Habitat account information that is obliged to remain documented for administrative, legal, or security purposes.</p>
+      <p class="small"><sup>2</sup>&nbsp; You can request to receive an exported document of all account information about You stored on Animat Boutique. You can also request that the account office at Animat Habitat erase all account information about You stored on Animat Boutique, however, this does not include any Animat Habitat account information that is obliged to remain documented for administrative, legal, or security purposes.</p>
 
     </div>
 
