--- a/scene/i/book-of-ella-2/index.html
+++ b/scene/i/book-of-ella-2/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <img alt="Calvin and Hobbes &ndash; snow art." src="https://via.animathabitat.org/img/01/comic/~bill-watterson/calvin-and-hobbes.snow-art.1.jpg" />
-      <p class="gutter-side text-right"><i>Calvin and Hobbes</i> (November 1985 - December 1995) &copy; Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
+      <p class="gutter-side text-right"><i>Calvin and Hobbes</i> (November 1985 - December 1995), image courtesy of Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
 
       <div>
         <p>The sense of time in a comic book is illustrated through sequence. In a sequence of images, there is implicit understanding of what leads up to, and what follows, each image. Take out any one image and the sequence takes on a different meaning. McCloud continued:</p>
@@ -68,7 +68,7 @@
       </div>
 
       <img alt="Calvin and Hobbes &ndash; snow art." src="https://via.animathabitat.org/img/01/comic/~bill-watterson/calvin-and-hobbes.snow-art.eggplant.jpg" />
-      <p class="gutter-side text-right"><i>Calvin and Hobbes</i> (November 1985 - December 1995) &copy; Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
+      <p class="gutter-side text-right"><i>Calvin and Hobbes</i> (November 1985 - December 1995), image courtesy of Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
 
       <div>
         <p>The page of the comic book or the moment in the story, the panel, the border, the image and the language &ndash; and the space in-between in which all these elements are set to flow together &ndash; comprise the tool kit for a comic book artist to place, and to visually give a sense of weight to, the events of a story.</p>
@@ -86,7 +86,7 @@
       </div> -->
 
       <img alt="Calvin and Hobbes &ndash; snow art." src="https://via.animathabitat.org/img/01/comic/~bill-watterson/calvin-and-hobbes.snow-art.2.jpg" />
-      <p class="gutter-side text-right"><i>Calvin and Hobbes</i> (November 1985 - December 1995) &copy; Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
+      <p class="gutter-side text-right"><i>Calvin and Hobbes</i> (November 1985 - December 1995), image courtesy of Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
 
       <div>
         <p>The representation of time in a comic book &ndash; in print &ndash; however is only just an adaptation. This is complicated as comic books enter the digital space. In his talk, McCloud had described this transition of the comic book medium from print to the screen as an opportunity to return to &ndash; as well as to reimagine &ndash; the visual continuity of an ancient narrative form. McCloud made the case:</p>
@@ -121,7 +121,7 @@
       </div>
 
       <img alt="Calvin and Hobbes &ndash; snow art." src="https://via.animathabitat.org/img/01/comic/~bill-watterson/calvin-and-hobbes.snow-art.3.jpg" />
-      <p class="gutter-side text-right"><i>Calvin and Hobbes</i> (November 1985 - December 1995) &copy; Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
+      <p class="gutter-side text-right"><i>Calvin and Hobbes</i> (November 1985 - December 1995), image courtesy of Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
 
       <div class="clear">
 
@@ -143,17 +143,17 @@
 
       <div class="clear diptych ptych-fixed">
         <div class="clear ptych-left">
-          <img alt="Bottom of the Ninth (2012) p.10 &copy; Ryan Woodward" src="https://via.animathabitat.org/img/01/comic/~ryan-woodward/bottom-of-the-ninth-p.10.png" />
+          <img alt="Bottom of the Ninth (2012), page 10, by Ryan Woodward" src="https://via.animathabitat.org/img/01/comic/~ryan-woodward/bottom-of-the-ninth-p.10.png" />
 
         </div>
 
         <div class="clear ptych-right">
-          <img alt="Bottom of the Ninth (2012) p.11 &copy; Ryan Woodward" src="https://via.animathabitat.org/img/01/comic/~ryan-woodward/bottom-of-the-ninth-p.11.png" />
+          <img alt="Bottom of the Ninth (2012), page 11, by Ryan Woodward" src="https://via.animathabitat.org/img/01/comic/~ryan-woodward/bottom-of-the-ninth-p.11.png" />
 
         </div>
 
       </div>
-      <p class="gutter-side text-right"><i>Bottom of the Ninth</i> (2012) p&nbsp;10-11 &copy; Ryan Woodward [<a href="../../../url/www/ryanwoodwardart-bottom-of-the-ninth/" rel="noopener" target="_blank" title="Ryan Woodward / Bottom of the Ninth">ryanwoodwardart.com</a>]</p>
+      <p class="gutter-side text-right"><i>Bottom of the Ninth</i> (2012), p&nbsp;10-11 courtesy of Ryan Woodward [<a href="../../../url/www/ryanwoodwardart-bottom-of-the-ninth/" rel="noopener" target="_blank" title="Ryan Woodward / Bottom of the Ninth">ryanwoodwardart.com</a>]</p>
 
       <div>
         <p>As an early innovation in this area, <i>Bottom of the Ninth</i> (app, 2012) experimented with audio and video as temporal phenomena within a digital comic. The app cycles through a mix of background music, foley effects and dialogue and so on. This combination helps to demonstrate that audio in an interactive context is most effective when layered in ambiguity. When audio is modulated, then sound can play a part in a system of feedback to encourage and reinforce interaction. The app similarly uses a collage of images, image sequences and video clips and so on. The combination of image formats helps to demonstrate that video is likewise most effective when modulated and fitted within a system of interaction.</p>
@@ -163,8 +163,8 @@
       </div>
 
       <div class="clear">
-        <img alt="Device 6 &ndash; screen 05. (2013) &copy; Simogo" src="https://via.animathabitat.org/img/01/comic/~simogo/device-6.screen.5.jpg" />
-        <p class="gutter-side text-right"><i>Device 6</i> screen-05 (2013) &copy; Simon Flesser [<a href="../../../url/www/simogo-device-6/" rel="noopener" target="_blank" title="Simon Flesser / Device 6">simogo.com</a>]</p>
+        <img alt="" src="https://via.animathabitat.org/img/01/comic/~simogo/device-6.screen.5.jpg" />
+        <p class="gutter-side text-right">Image preview 5 from <i>Device 6</i> (2013) by Simon Flesser [<a href="../../../url/www/simogo-device-6/" rel="noopener" target="_blank" title="Simon Flesser / Device 6">simogo.com</a>]</p>
 
       </div>
 
