--- a/scene/i/book-of-ella-3/index.html
+++ b/scene/i/book-of-ella-3/index.html
@@ -58,22 +58,22 @@
 
       <div class="clear triptych ptych-fixed">
         <div class="clear-left ptych-left">
-          <img alt="Daytripper (2010) Ch.1 &copy; Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.1.jpg" />
+          <img alt="Daytripper (2010), chapter 1, by Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.1.jpg" />
 
         </div>
 
         <div class="clear-center ptych-center">
-          <img alt="Daytripper (2010) Ch.2 &copy; Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.2.jpg" />
+          <img alt="Daytripper (2010), chapter 2, by Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.2.jpg" />
 
         </div>
 
         <div class="clear-right ptych-right">
-          <img alt="Daytripper (2010) Ch.3 &copy; Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.3.jpg" />
+          <img alt="Daytripper (2010), chapter 3, by Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.3.jpg" />
 
         </div>
 
       </div>
-      <p class="gutter-side text-right"><i>Daytripper</i> (2010) Ch&nbsp;1-3 &copy; Fabio Moon, Gabriel Ba</p>
+      <p class="gutter-side text-right"><i>Daytripper</i> (2010), Ch&nbsp;1-3 cover images courtesy of Fabio Moon, Gabriel Ba</p>
 
       <div>
         <p> ypically rectangular, historically rigid and repeated as a natural extension of the comic strip format of the newspapers wherein the medium arrived. The most basic panel layout, in which both the shape and size of the panel stay the same, acts to contain the view of the reader, nothing more. The added framing of a single, consistent perspective in a sequence of similar panels is a way to make clear the change in the scene within the panel.</p>
@@ -82,17 +82,17 @@
 
       <div class="clear diptych ptych-fixed">
         <div class="clear ptych-left">
-          <img alt="Daytripper (2010) p.83 &copy; Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-p.83.jpg" />
+          <img alt="Daytripper (2010), page 83, by Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-p.83.jpg" />
 
         </div>
 
         <div class="clear ptych-right">
-          <img alt="Daytripper (2010) p.84 &copy; Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-p.84.jpg" />
+          <img alt="Daytripper (2010), page 84, by Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-p.84.jpg" />
 
         </div>
 
       </div>
-      <p class="gutter-side text-right"><i>Daytripper</i> p&nbsp;83-84 (2010) &copy; Fabio Moon, Gabriel Ba</p>
+      <p class="gutter-side text-right"><i>Daytripper</i> (2010), p&nbsp;83-84 courtesy of Fabio Moon, Gabriel Ba</p>
 
       <div>
         <p>Alternatively, the comic book &ndash; and the digital comic &ndash; has a capacity to apply panels with angled borders and cut-out shapes that may suggest a context, an inflection or a movement in a sequence of a story. Eisner also looked at the comic panel in a figurative context:</p>
@@ -107,22 +107,22 @@
 
       <div class="clear triptych ptych-fixed">
         <div class="clear-left ptych-left">
-          <img alt="Daytripper (2010) Ch.4 &copy; Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.4.jpg" />
+          <img alt="Daytripper (2010), chapter 4, by Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.4.jpg" />
 
         </div>
 
         <div class="clear-center ptych-center">
-          <img alt="Daytripper (2010) Ch.6 &copy; Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.6.jpg" />
+          <img alt="Daytripper (2010), chapter 6, by Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.6.jpg" />
 
         </div>
 
         <div class="clear-right ptych-right">
-          <img alt="Daytripper (2010) Ch.8 &copy; Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.8.jpg" />
+          <img alt="Daytripper (2010), chapter 8, by Fabio Moon, Gabriel Ba" src="https://via.animathabitat.org/img/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.8.jpg" />
 
         </div>
 
       </div>
-      <p class="gutter-side text-right"><i>Daytripper</i> (2010) Ch&nbsp;4, 6, 8 &copy; Fabio Moon, Gabriel Ba</p>
+      <p class="gutter-side text-right"><i>Daytripper</i> (2010), Ch&nbsp;4, 6 and 8 cover images courtesy of Fabio Moon, Gabriel Ba</p>
 
       <div>
         <p>The use of cut-out shapes in panel borders may extend the function of a simple container-panel to take on the quality of a narrative symbol. The shape of a panel may represent a character, an idea or a setting in the story. A panel border may also function as a structural element in the scene within, or without, the panel itself. Examples include architectural frames such as archways, doorways, tunnels, windows or foreground silhouettes such as mountains, rocks, trees and waterways that may contribute to the shape of a comic book panel, and that are also a structure in the setting of the story.</p>
@@ -134,8 +134,8 @@
 
       </div>
 
-      <img alt="Buz Sawyer &ndash; (January 16, 1978) &copy; Roy Crane" src="https://via.animathabitat.org/img/01/comic/~roy-crane/buz-sawyer.1978.01.16.jpg" />
-      <p class="gutter-side text-right"><i>Buz Sawyer</i> (January 16, 1978) &copy; Roy Crane</p>
+      <img alt="Buz Sawyer (January 16, 1978) by Roy Crane" src="https://via.animathabitat.org/img/01/comic/~roy-crane/buz-sawyer.1978.01.16.jpg" />
+      <p class="gutter-side text-right"><i>Buz Sawyer</i> (16 January 1978), image courtesy of Roy Crane</p>
 
       <div>
         <p>Roy Crane, the creator of <i>Captain Easy</i> (comic strip, July 1933 - October 1988) and <i>Buz Sawyer</i> (comic strip, November 1943 - October 1989), is credited as a pioneer of the use of onomatopoeic sound effects in comics, adding &ldquo;bam&rdquo; and &ldquo;pow&rdquo; and so on to what had previously been an almost entirely written word.</p>
@@ -160,8 +160,8 @@
 
       </div>
 
-      <img alt="Garfield &ndash; (February 19, 2009) &copy; Jim Davis" src="https://via.animathabitat.org/img/01/comic/~jim-davis/garfield.2009.02.19.gif" />
-      <p class="gutter-side text-right lineend"><i>Garfield</i> (February 19, 2009) &copy; Jim Davis [<a href="../../../url/www/garfield/" rel="noopener" target="_blank" title="Jim Davis / Garfield">garfield.com</a>]</p>
+      <img alt="Garfield (February 19, 2008) by Jim Davis" src="https://via.animathabitat.org/img/01/comic/~jim-davis/garfield.2009.02.19.gif" />
+      <p class="gutter-side text-right lineend"><i>Garfield</i> (19 February 2008), image courtesy of Jim Davis [<a href="../../../url/www/garfield/" rel="noopener" target="_blank" title="Jim Davis / Garfield">garfield.com</a>]</p>
 
       <div class="gutter-tobo"><div class="color text-center"><h3 class="linebreak">Help give life to the wild places.</h3><h5>You can support Animat Habitat in a few ways.</h5><div class="triptych">
 
