--- a/scene/i/book-of-ella/index.html
+++ b/scene/i/book-of-ella/index.html
@@ -36,7 +36,7 @@
 
   <section>
     <article>
-      <img alt="White Elephant graphic: change. (2013) &copy; Animat Habitat" src="../../../inc/img/01/we.cover.banner.jpg" />
+      <img alt="White Elephant graphic: change. &copy; Animat Habitat, 2013." src="../../../inc/img/01/we.cover.banner.jpg" />
       <p class="text-right gutter-side"><i>White Elephant</i> cover art: CHANGE (2015)</p>
 
       <div>
@@ -51,7 +51,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Story is all around us. It's everywhere. It's your life. Whatever happens to you throughout the day, throughout the week, that's part of it&mdash;that's part of story. How you live &ndash; and who you are &ndash; is part of the process.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Rick del Carmen. (2016) <i>The Bancroft Brothers Animation Podcast</i>, e/64: &lsquo;The Bancroft Bros. talk with the Del Carmen Bros: Animation in the Family.&rsquo; Creative Talent Network (CTN) Burbank, California</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Story is all around us. It's everywhere. It's your life. Whatever happens to you throughout the day, throughout the week, that's part of it&mdash;that's part of story. How you live &ndash; and who you are &ndash; is part of the process.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Rick del Carmen, Creative Talent Network, Burbank, California, <i>The Bancroft Brothers Animation Podcast</i>, e&nbsp;64: &lsquo;The Bancroft Bros talk with the Del Carmen Bros: Animation in the Family.&rsquo; (2016)</font></h4>
 
       </div>
 
@@ -76,7 +76,7 @@
 
       </div>
 
-      <img alt="White Elephant app cover art (2014) &copy; Animat Habitat" src="../../../inc/img/01/we.app.art.jpg" />
+      <img alt="White Elephant app cover art &copy; Animat Habitat, 2014." src="../../../inc/img/01/we.app.art.jpg" />
       <p class="text-right gutter-side"><i>White Elephant</i> cover art (2015)</p>
 
       <div>
@@ -92,7 +92,7 @@
 
       </div> -->
 
-      <img alt="White Elephant Thank you cards. (2014) &copy; Animat Habitat" src="../../../inc/img/01/we.cover.card.banner.jpg" />
+      <img alt="White Elephant Thank you cards. &copy; Animat Habitat, 2014." src="../../../inc/img/01/we.cover.card.banner.jpg" />
       <p class="text-right gutter-side"><i>White Elephant</i> cover art cards (2015)</p>
 
       <div>
