--- a/scene/i/elephant-conservation-africa/index.html
+++ b/scene/i/elephant-conservation-africa/index.html
@@ -51,7 +51,7 @@
       </div>
 
       <img alt="" src="https://via.animathabitat.org/img/01/photo/~mark-deeble/deeble.2014.satao.bull-drinking.png" />
-      <p class="text-right gutter-side">Satao, &ldquo;Bull drinking.&rdquo; (2014) &copy; Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wordpress/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>, desaturated]</p>
+      <p class="text-right gutter-side">Satao, &ldquo;Bull drinking&rdquo; (2014), photograph courtesy of Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wordpress/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>, desaturated]</p>
 
       <div>
 
@@ -67,7 +67,7 @@
       </div>
 
       <img alt="" src="https://via.animathabitat.org/img/01/photo/~mark-deeble/deeble.2014.satao.dead-and-splayed.png" />
-      <p class="text-right gutter-side">Satao, &ldquo;Dead and splayed.&rdquo; (2014) &copy; Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wordpress/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>, desaturated]</p>
+      <p class="text-right gutter-side">Satao, &ldquo;Dead and splayed&rdquo; (2014), photograph courtesy of Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wordpress/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>, desaturated]</p>
 
       <div>
         <p>The Tsavo bull was killed for his ivory in late May 2014.</p>
