--- a/scene/i/elephant-conservation-botswana/index.html
+++ b/scene/i/elephant-conservation-botswana/index.html
@@ -39,7 +39,7 @@
   <section>
     <article>
       <img alt="" src="https://via.animathabitat.org/img/01/photo/~elephants-without-borders/ewb.ele-eyes.jpg" />
-      <p class="text-right gutter-side">Elephant &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
+      <p class="text-right gutter-side">&lsquo;Elephant&rsquo;, photograph courtesy of Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       <div>
         <h4 class="letterhead thin">June 2020</h4>
@@ -152,7 +152,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~elephants-without-borders/ewb.okavango.jpg" />
-        <p class="text-right gutter-side">Okavango &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
+        <p class="text-right gutter-side">&lsquo;Okavango&rsquo;, photograph courtesy of Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       </div>
 
@@ -215,7 +215,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~elephants-without-borders/ewb.landscape.1024-357.jpg" />
-        <p class="text-right gutter-side">Grey Frontiers &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
+        <p class="text-right gutter-side">&lsquo;Grey Frontiers&rsquo;, photograph courtesy of Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       </div>
 
