--- a/scene/i/elephant-conservation-kenya/index.html
+++ b/scene/i/elephant-conservation-kenya/index.html
@@ -57,7 +57,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~/2016.kenya.ivory-pile.jpg" />
-        <p class="text-right gutter-side">&lsquo;KWS ranger stands guard in Nairobi National Park&rsquo;, 2016 &copy; AP / Ben Curtis [<a href="../../../url/www/bencurtis/" rel="noopener" target="_blank" title="Ben Curtis">bencurtis.org</a>]</p>
+        <p class="text-right gutter-side">&lsquo;KWS ranger stands guard in Nairobi National Park&rsquo; (2016), photograph courtesy of AP / Ben Curtis [<a href="../../../url/www/bencurtis/" rel="noopener" target="_blank" title="Ben Curtis">bencurtis.org</a>]</p>
 
       </div>
 
@@ -67,7 +67,7 @@
       </div>
 
       <img alt="" src="https://via.animathabitat.org/img/01/photo/~/2016.kenya.ivory-burn.jpg" />
-      <p class="text-right gutter-side">&lsquo;Ivory set on fire in Nairobi National Park&rsquo;, Kenya, 2016 &copy; AP / Ben Curtis [<a href="../../../url/www/bencurtis/" rel="noopener" target="_blank" title="Ben Curtis">bencurtis.org</a>]</p>
+      <p class="text-right gutter-side">&lsquo;Ivory set on fire in Nairobi National Park&rsquo;, Kenya (2016), photograph courtesy of AP / Ben Curtis [<a href="../../../url/www/bencurtis/" rel="noopener" target="_blank" title="Ben Curtis">bencurtis.org</a>]</p>
 
       <div>
         <p>Kenya Wildlife Service (KWS) director general Kitili Mbathi stated, &ldquo;We do not believe there is any intrinsic value in ivory, and therefore we are going to burn all our stockpiles and demonstrate to the world that ivory is only valuable on elephants&rdquo;. The act of burning an ivory stockpile serves as a public statement to discourage international market expectations of a future trade in ivory. KWS chair of the board Dr Richard Leakey hoped this act of burning Kenya's ivory stockpiles would also encourage other African countries to support a ban: &ldquo;We will burn ivory and we hope every country in the globe will support Kenya and say never again should we trade ivory&rdquo;. Kenyatta proclaimed that Kenya will push for the total ban on trade in ivory at the 17th meeting of CITES, to be held in South Africa later this year.</p>
@@ -168,7 +168,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/logo/~/hands-off.png" />
-        <p class="gutter-side text-right">Hands Off Our Elephants &copy; Wildlife Direct [<a href="../../../url/-org/wildlifedirect-hands-off-our-elephants/" rel="noopener" target="_blank" title="Wildlife Direct / Hands Off Our Elephants">wildlifedirect.org</a>, recolored]</p>
+        <p class="gutter-side text-right">&lsquo;Hands Off Our Elephants&rsquo;, image courtesy of Wildlife Direct [<a href="../../../url/-org/wildlifedirect-hands-off-our-elephants/" rel="noopener" target="_blank" title="Wildlife Direct / Hands Off Our Elephants">wildlifedirect.org</a>, recolored]</p>
 
       </div>
 
