--- a/scene/i/elephant-conservation-nairobi/index.html
+++ b/scene/i/elephant-conservation-nairobi/index.html
@@ -39,7 +39,7 @@
   <section>
     <article>
       <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.orphans-line.1.jpg" />
-      <p class="text-right gutter-side">&ldquo;Orphans line.&rdquo; Nairobi Nursery, 2019 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>, cropped]</p>
+      <p class="text-right gutter-side">&ldquo;Orphans line&rdquo;, Nairobi (2019), photograph courtesy of Sheldrick Wildlife Trust [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>, cropped]</p>
 
       <div>
         <h4 class="letterhead thin">March 2019</h4>
@@ -62,7 +62,7 @@
       <div class="quote clear-top clear-bottom">
         <div class="quote clear-top clear-bottom">
           <img alt="" src="https://via.animathabitat.org/img/01/logo/~/swt.1977.png" />
-          <p class="text-right">Logo &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
+          <p class="text-right">Sheldrick Wildlife Trust logomark [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
         </div>
 
       </div>
@@ -93,7 +93,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2017.kiasa-with-two-big-bulls.jpg" class="matte">
-        <p class="gutter-side text-right">&ldquo;Kiasa with two bulls.&rdquo; Tsavo, 2017 &copy; SWT</p>
+        <p class="gutter-side text-right">&ldquo;Kiasa with two bulls&rdquo;, Tsavo (2017), photograph courtesy of Sheldrick Wildlife Trust</p>
 
       </div>
 
@@ -111,12 +111,12 @@
         <div class="clear diptych">
           <div class="clear">
             <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2017.51117.kiasa-getting-stronger.jpg" class="matte">
-            <p class="gutter-side text-right">&ldquo;Kiasa getting stronger.&rdquo; Nairobi Nursery, 2017 &copy; SWT</p>
+            <p class="gutter-side text-right">&ldquo;Kiasa getting stronger&rdquo;, Nairobi (2017), photograph courtesy of Sheldrick Wildlife Trust</p>
           </div>
 
           <div class="clear">
             <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2017.74653.kiasa-keeping-distance.jpg" class="matte">
-            <p class="gutter-side text-right">&ldquo;Kiasa keeping her distance.&rdquo; Nairobi Nursery, 2017 &copy; SWT</p>
+            <p class="gutter-side text-right">&ldquo;Kiasa keeping her distance&rdquo;, Nairobi (2017), photograph courtesy of Sheldrick Wildlife Trust</p>
           </div>
 
         </div>
@@ -140,12 +140,12 @@
         <div class="clear diptych">
           <div class="clear">
             <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2018.81541.kiasa-happy-settled-girl.jpg" class="matte">
-            <p class="gutter-side text-right">&ldquo;Happy settled girl.&rdquo; Nairobi Nursery, 2018 &copy; SWT</p>
+            <p class="gutter-side text-right">&ldquo;Happy settled girl&rdquo;, Nairobi (2018), photograph courtesy of Sheldrick Wildlife Trust</p>
           </div>
 
           <div class="clear">
             <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2018.95826.kiasa-sucking-her-trunk.jpg" class="matte">
-            <p class="gutter-side text-right">&ldquo;Kiasa sucking her trunk.&rdquo; Nairobi Nursery, 2018 &copy; SWT</p>
+            <p class="gutter-side text-right">&ldquo;Kiasa sucking her trunk&rdquo;, Nairobi (2018), photograph courtesy of Sheldrick Wildlife Trust</p>
           </div>
 
         </div>
@@ -361,7 +361,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.2017.kiasa.jpg" class="matte">
-        <p class="gutter-side text-right">&ldquo;Kiasa.&rdquo; Nairobi Nursery, 2017 &copy; SWT</p>
+        <p class="gutter-side text-right">&ldquo;Kiasa&rdquo;, Nairobi (2017), photograph courtesy of Sheldrick Wildlife Trust</p>
 
       </div>
 
@@ -375,12 +375,12 @@
       <div class="clear diptych">
         <div class="clear-bottom">
           <img alt="" src="https://via.animathabitat.org/img/01/art/~angela-sheldrick/water-colour.2018.10.jpg" class="matte-thin">
-          <p class="text-right">Angela Sheldrick Water Colour, October 2018 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust-water-colours/" target="_blank" title="Sheldrick Wildlife Trust / Water Colours">sheldrickwildlifetrust.org</a>]</p>
+          <p class="text-right">&lsquo;October 2018&rsquo;, watercolor painting courtesy of Angela Sheldrick [<a href="../../../url/-org/sheldrickwildlifetrust-water-colours/" target="_blank" title="Sheldrick Wildlife Trust / Water Colours">sheldrickwildlifetrust.org</a>]</p>
         </div>
 
         <div class="clear-bottom">
           <img alt="" src="https://via.animathabitat.org/img/01/art/~angela-sheldrick/water-colour.2018.11.jpg" class="matte-thin">
-          <p class="text-right">Angela Sheldrick Water Colour, November 2018 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust-water-colours/" target="_blank" title="Sheldrick Wildlife Trust / Water Colours">sheldrickwildlifetrust.org</a>]</p>
+          <p class="text-right">&lsquo;November 2018&rsquo;, watercolor painting courtesy of Angela Sheldrick [<a href="../../../url/-org/sheldrickwildlifetrust-water-colours/" target="_blank" title="Sheldrick Wildlife Trust / Water Colours">sheldrickwildlifetrust.org</a>]</p>
         </div>
 
       </div>
@@ -397,7 +397,7 @@
 
       <div class="clear">
         <iframe src="https://www.youtube.com/embed/mwGErZMe8qw" class="video-extra" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p class="text-right gutter-side">&ldquo;The Sheldrick Trust &ndash; 40 years on.&rdquo; 2017 &copy; SWT</p>
+        <p class="text-right gutter-side">&ldquo;The Sheldrick Trust &ndash; 40 years on&rdquo; (short film, 2017), courtesy of Sheldrick Wildlife Trust</p>
 
       </div>
 
