--- a/scene/i/history-of-elephants-anatomy/index.html
+++ b/scene/i/history-of-elephants-anatomy/index.html
@@ -55,7 +55,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~/museum-of-natural-history.marseille.elephant-skeleton.recolored.jpg" />
-        <p class="text-right gutter-side">Elephant skeleton &copy; Museum of Natural History, Marseille [recolored]</p>
+        <p class="text-right gutter-side">Photograph of an elephant skeleton courtesy of the Museum of Natural History, Marseille [recolored]</p>
 
       </div>
 
@@ -149,7 +149,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~steve-bloom/bloom.savuti.botswana.003321-SB1.jpg" />
-        <p class="text-right gutter-side">Close-up-of elephants feet disturbing Cape Turtle Doves &copy; Steve Bloom [<a href="../../../url/-com/stevebloomphoto-elephants/" target="_blank" title="Steve Bloom / Photography / Elephants">stevebloomphoto.com</a>]</p>
+        <p class="text-right gutter-side">&lsquo;Close-up-of elephants feet disturbing Cape Turtle Doves&rsquo;, photograph courtesy of Steve Bloom [<a href="../../../url/-com/stevebloomphoto-elephants/" target="_blank" title="Steve Bloom / Photography / Elephants">stevebloomphoto.com</a>]</p>
 
       </div>
 
@@ -176,7 +176,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~sheldrick-wildlife-trust/swt.tsavo-02.jpg" />
-        <p class="text-right gutter-side">Daphne Sheldrick, Tsavo &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
+        <p class="text-right gutter-side">Daphne Sheldrick, Tsavo, photograph courtesy of Sheldrick Wildlife Trust [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
 
       </div>
 
@@ -201,7 +201,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~steve-bloom/bloom.savuti.botswana.002577-SB1.jpg" />
-        <p class="text-right gutter-side">Charging bull elephant, Savuti, Botswana &copy; Steve Bloom [<a href="../../../url/-com/stevebloomphoto-elephants/" target="_blank" title="Steve Bloom / Photography / Elephants">stevebloomphoto.com</a>]</p>
+        <p class="text-right gutter-side">&lsquo;Charging bull elephant, Savuti&rsquo;, Botswana, photograph courtesy of Steve Bloom [<a href="../../../url/-com/stevebloomphoto-elephants/" target="_blank" title="Steve Bloom / Photography / Elephants">stevebloomphoto.com</a>]</p>
 
       </div>
 
