--- a/scene/i/index.html
+++ b/scene/i/index.html
@@ -354,6 +354,9 @@
       <p class="linebreak small"><font class="title">Tali</font></p>
       <p class="small"><font class="small">Oldonyiro (<font class="fr">&nbsp;</font>2023-2025<font class="fr">&nbsp;</font>)</font></p>
 
+      <p class="linebreak small"><font class="title">Craig</font></p>
+      <p class="small"><font class="small">Amboseli (<font class="fr">&nbsp;</font>c.1972-2026<font class="fr">&nbsp;</font>)</font></p>
+
     </div>
 
   </footer>
