--- a/scene/i/making-of-ella-3/index.html
+++ b/scene/i/making-of-ella-3/index.html
@@ -48,7 +48,7 @@
 
       </div>
 
-      <img alt="White Elephant character expression sheet. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.character.expression-s.1440.jpg" />
+      <img alt="White Elephant character expression sheet. &copy; Animat Habitat, 2015." src="../../../inc/img/01/we.character.expression-s.1440.jpg" />
       <p class="text-right gutter-side"><i>White Elephant</i> character expression sheet. (2015)</p>
 
       <div>
@@ -58,10 +58,10 @@
 
       </div>
 
-      <img alt="White Elephant storyboard p&nbsp;8-9. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.story.board.8-9.jpg" />
+      <img alt="White Elephant storyboard p&nbsp;8-9. &copy; Animat Habitat, 2015." src="../../../inc/img/01/we.story.board.8-9.jpg" />
       <!-- <p class="text-right gutter-side"><i>White Elephant</i> storyboard p&nbsp;8-9. (2015)</p> -->
 
-      <img alt="White Elephant storyboard p&nbsp;9-12. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.story.board.9-12.jpg" />
+      <img alt="White Elephant storyboard p&nbsp;9-12. &copy; Animat Habitat, 2015." src="../../../inc/img/01/we.story.board.9-12.jpg" />
       <p class="text-right gutter-side lineend"><i>White Elephant</i> storyboard p&nbsp;8-9, p&nbsp;9-12. (2015)</p>
 
       <div>
@@ -70,7 +70,7 @@
 
       </div>
 
-      <img class="matte-thin" alt="White Elephant sketch: &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.sketch.jpg" />
+      <img class="matte-thin" alt="White Elephant sketch: &lsquo;Ella after the storm.&rsquo; &copy; Animat Habitat, 2015." src="../../../inc/img/01/we.ella-after-the-storm.sketch.jpg" />
       <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; (pencil, 2015)</p>
 
       <div>
@@ -78,7 +78,7 @@
 
       </div>
 
-      <img class="matte-thin" alt="White Elephant &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.jpg" />
+      <img class="matte-thin" alt="White Elephant &lsquo;Ella after the storm.&rsquo; &copy; Animat Habitat, 2015." src="../../../inc/img/01/we.ella-after-the-storm.jpg" />
       <p class="text-right gutter-side lineend">&ldquo;Ella after the storm.&rdquo; (digital paint, 2015)</p>
 
       <!-- <div>
@@ -88,7 +88,7 @@
 
       </div> -->
 
-      <!-- <img class="matte-thin" alt="White Elephant render: &lsquo;Ella after the storm.&rsquo; (2019) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.render.jpg" /> -->
+      <!-- <img class="matte-thin" alt="White Elephant render: &lsquo;Ella after the storm.&rsquo; &copy; Animat Habitat, 2019." src="../../../inc/img/01/we.ella-after-the-storm.render.jpg" /> -->
       <!-- <div class="matte"><h4 class="color">Image coming soon.</h4></div>
       <p class="text-right gutter-side lineend">&ldquo;Ella after the storm.&rdquo; (digital image, 2019)</p> -->
 
