--- a/scene/i/making-of-ella/index.html
+++ b/scene/i/making-of-ella/index.html
@@ -39,8 +39,8 @@
   <section>
     <article>
 
-      <img alt="Okavango Delta, Botswana [Landsat 8 Map] (2017) &copy; Descartes Labs" src="https://via.animathabitat.org/img/01/geo/~/africa-okavango.jpg" />
-      <p class="text-right gutter-side">Okavango Delta, Botswana. <i>Landsat 8 Map</i> &copy; Descartes Labs</p>
+      <img alt="Okavango Delta, Botswana (2017) [Landsat 8 Map] from Descartes Labs" src="https://via.animathabitat.org/img/01/geo/~/africa-okavango.jpg" />
+      <p class="text-right gutter-side">Okavango Delta, Botswana (2017), <i>Landsat 8</i> map courtesy of Descartes Labs</p>
 
       <div>
         <h4 class="letterhead thin">March 2014</h4>
