--- a/scene/i/reference-art/index.html
+++ b/scene/i/reference-art/index.html
@@ -114,7 +114,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/art/~robert-bateman/bateman.an-artist-in-nature.jpg" />
-        <p class="text-right gutter-side"><i>An Artist in Nature</i> (1990) &copy; Robert Bateman [<a title="Robert Bateman" href="../../../url/-org/batemancentre-robert-bateman/" target="_blank" rel="noopener">batemancentre.org</a>]</p>
+        <p class="text-right gutter-side">Robert Bateman <i>An Artist in Nature</i> (book, 1990) [<a title="Robert Bateman" href="../../../url/-org/batemancentre-robert-bateman/" target="_blank" rel="noopener">batemancentre.org</a>]</p>
 
       </div>
 
@@ -134,14 +134,14 @@
         <p class="linebreak">In the book, Brandt shares a stark portrayal of animals, which offers a poignant look at the tragedy for African ecosystems. He describes the choice to photograph in black-and-white as not purely aesthetic, &ldquo;it accentuates the impression of the images belonging to another, much earlier time [&hellip;] already long gone.&rdquo;</p>
 
         <div class="clear-bottom">
-          <p><b class="color">&ldquo;</b>[&hellip;] there is a continent-wide apocalypse of all animal life occurring across Africa. When you fly over such a vast continent with so much wilderness, it’s hard to imagine that there’s not enough room for both animal and man. But between an insatiable demand from other countries for animal parts and natural resources and a skyrocketing human population, the animals are being relentlessly squeezed out and hunted down. There is no park or reserve big enough for the animals to live out their lives safely.<b class="color">&rdquo;</b><font class="color"> &mdash;&nbsp;Nick Brandt. (2013) <i>Across The Ravaged Land</i>, p&nbsp;7. Abrams.</font></p>
+          <p><b class="color">&ldquo;</b>[&hellip;] there is a continent-wide apocalypse of all animal life occurring across Africa. When you fly over such a vast continent with so much wilderness, it’s hard to imagine that there’s not enough room for both animal and man. But between an insatiable demand from other countries for animal parts and natural resources and a skyrocketing human population, the animals are being relentlessly squeezed out and hunted down. There is no park or reserve big enough for the animals to live out their lives safely.<b class="color">&rdquo;</b><font class="color"> &mdash;&nbsp;Nick Brandt, Abrams <i>Across The Ravaged Land</i> (2013), p&nbsp;7</font></p>
         </div>
 
       </div>
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~nick-brandt/brandt.across-the-ravaged-land.jpg" />
-        <p class="text-right gutter-side"><i>Across the Ravaged Land</i> (2013) &copy; Nick Brandt [<a title="Nick Brandt" href="../../../url/-com/nickbrandt/" target="_blank" rel="noopener">nickbrandt.com</a>]</p>
+        <p class="text-right gutter-side"><i>Across the Ravaged Land</i> (2013), photograph courtesy of Nick Brandt [<a title="Nick Brandt" href="../../../url/-com/nickbrandt/" target="_blank" rel="noopener">nickbrandt.com</a>]</p>
       </div>
 
       <div>
@@ -150,7 +150,7 @@
       </div>
 
       <img alt="" src="https://via.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.africa.2.savannah-elephants.jpg" />
-      <p class="text-right gutter-side"><i>Africa</i> (2013), e/2: &ldquo;Savannah&rdquo; &copy; BBC Studios Natural History Unit [<a title="BBC Studios Natural History Unit" href="../../../url/-com/bbcstudios-the-natural-history-unit/" target="_blank" rel="noopener">bbcstudios.com</a>]</p>
+      <p class="text-right gutter-side"><i>Africa</i> (2013), e&nbsp;2: &ldquo;Savannah&rdquo;, photograph courtesy of BBC Studios Natural History Unit [<a title="BBC Studios Natural History Unit" href="../../../url/-com/bbcstudios-the-natural-history-unit/" target="_blank" rel="noopener">bbcstudios.com</a>]</p>
 
       <div>
         <p><i>And one more thing&hellip;</i></p>
