--- a/scene/i/wildlife-documentary-big-tuskers/index.html
+++ b/scene/i/wildlife-documentary-big-tuskers/index.html
@@ -48,7 +48,7 @@
       </div>
 
       <img alt="Last of the Big Tuskers title" src="https://danealeksander.github.io/inc/img/copy/umboko-productions/lotbt-cover-1.4.spot.header.jpg" />
-      <p class="text-right gutter-side"><i>Last of the Big Tuskers</i> cover art &copy; Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
+      <p class="text-right gutter-side"><i>Last of the Big Tuskers</i> (2018), cover art courtesy of Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
 
       <div class="clear-top">
         <h3 class="linebreak">Last of the Big Tuskers (2018)</h3>
@@ -90,7 +90,7 @@
 
       <div class="clear">
         <img alt="Last of the Big Tuskers title" src="https://via.animathabitat.org/img/01/title/~/last-of-the-big-tuskers.title.png" />
-        <p class="text-right gutter-side"><i>Last of the Big Tuskers</i> title lettering &copy; Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
+        <p class="text-right gutter-side"><i>Last of the Big Tuskers</i> (2018), title lettering courtesy of Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
 
       </div>
 
