--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -62,8 +62,8 @@
       </div>
 
       <div class="clear">
-        <img alt="A wildlife ranger comforts Sudan moments before he passed away, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://via.animathabitat.org/img/00/photo/~ami-vitale/vitale.2018.sudan-at-ol-pejeta-conservancy.jpg" />
-        <p class="text-right gutter-side"><i>A wildlife ranger comforts Sudan moments before he passed away</i>, Ol Pejeta Conservancy, Kenya (March&nbsp;2018) &copy; Ami Vitale [<a href="../../../url/-com/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
+        <img alt="A wildlife ranger comforts Sudan moments before he passed away, Ol Pejeta Conservancy, Kenya (March 2018) by Ami Vitale" src="https://via.animathabitat.org/img/00/photo/~ami-vitale/vitale.2018.sudan-at-ol-pejeta-conservancy.jpg" />
+        <p class="text-right gutter-side"><i>A wildlife ranger comforts Sudan moments before he passed away</i>, Ol Pejeta Conservancy, Kenya (March&nbsp;2018), photograph courtesy of Ami Vitale [<a href="../../../url/-com/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
 
       </div>
 
@@ -73,12 +73,11 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>It is thought as many as twenty million elephants once roamed the continent, but many have been killed for their tusks&mdash;their ivory used for entirely ornimental purposes. Now just 350,000 elephants remain. [&hellip;] But of all Africa's remaining wildlife, it is the rhinoceros that has been most affected by poaching. In the Far East, its horn is used as traditional medicine. All of Africa's rhinos are now under threath, but for one subspecies it is likely to be too late. The northern white rhinoceros is facing extinction.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough. (2019) <i>Seven Worlds, One Planet</i>, e/7: Africa. BBC Studios</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>It is thought as many as twenty million elephants once roamed the continent, but many have been killed for their tusks&mdash;their ivory used for entirely ornimental purposes. Now just 350,000 elephants remain. [&hellip;] But of all Africa's remaining wildlife, it is the rhinoceros that has been most affected by poaching. In the Far East, its horn is used as traditional medicine. All of Africa's rhinos are now under threath, but for one subspecies it is likely to be too late. The northern white rhinoceros is facing extinction.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough, British Broadcasting Corporation <i>Seven Worlds, One Planet</i> (2019), e&nbsp;7: &lsquo;Africa&rsquo;</font></h4>
 
       </div>
 
       <div>
-
         <p><i>To be, and then not to be anymore.</i> The extinction of the northern white rhinoceros will inevitably mark an important moment in the history of humankind. We now hold a responsibility to examine why an extinction like this has happened and what that will mean for us humans, as a species, as well. We must carry on the story of the northern white rhinoceros as a reminder that there are other ways to look at wildlife. Stories like this can help remind people how we are all interconnected&mdash;all inextricably linked to the natural world.</p>
 
         <p class="linebreak">The black rhino &ndash; also known as the hook-lipped rhino &ndash; is categorized by the IUCN as critically endangered and has declined by more than ninety-five per cent since the 1960s. The black rhino is made up of four subspecies: the western black rhino, eastern black rhino, south-western black rhino and southern black rhino. The white rhino &ndash; misnamed for its wide mouth &ndash; is categorized by the IUCN as near threatened, and has been functionally reduced to one subspecies: southern white rhinos.<sup>&nbsp;[<a class="button" onclick="fn();" title="">3</a>]</sup></p>
@@ -91,8 +90,8 @@
       </div>
 
       <div class="clear">
-        <img alt="Fatu and Najin graze, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://via.animathabitat.org/img/00/photo/~ami-vitale/vitale.2018.fatu-and-najin-graze.jpg" />
-        <p class="gutter-side text-right"><i>Fatu and Najin graze</i>, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale [<a href="../../../url/-com/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
+        <img alt="Fatu and Najin graze, Ol Pejeta Conservancy, Kenya (March 2018) by Ami Vitale" src="https://via.animathabitat.org/img/00/photo/~ami-vitale/vitale.2018.fatu-and-najin-graze.jpg" />
+        <p class="gutter-side text-right"><i>Fatu and Najin graze</i>, Ol Pejeta Conservancy, Kenya (March&nbsp;2018), photograph courtesy of Ami Vitale [<a href="../../../url/-com/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
 
       </div>
 
@@ -111,7 +110,7 @@
 
       <div class="clear">
         <iframe src="https://player.vimeo.com/video/271847987?color=ffcf60&title=0&byline=0&portrait=0&quality=1080p" class="video-extra" frameborder="0" allow="accelerometer; autoplay; fullscreen; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p class="text-right gutter-side">&ldquo;Saving The Last Northern White Rhino&rdquo; 360 VR &copy; Black Bean [<a href="../../url/vimeo/blackbean-271847987/" rel="noopener" target="_blank" title="Vimeo / Black Bean / Saving The Last Northern White Rhino 360 VR">vimeo.com</a>]</p>
+        <p class="text-right gutter-side">&ldquo;Saving The Last Northern White Rhino&rdquo;, 360 VR film courtesy of Black Bean [<a href="../../url/vimeo/blackbean-271847987/" rel="noopener" target="_blank" title="Vimeo / Black Bean / Saving The Last Northern White Rhino 360 VR">vimeo.com</a>]</p>
 
       </div>
 
