--- a/c/privacy-policy/index.html
+++ b/c/privacy-policy/index.html
@@ -33,17 +33,17 @@
     <article>
       <div>
         <h4 class="letterhead"><i>v1.0&mdash;2018.09</i></h4>
-        <p><i>In terms hereunder any reference to &ldquo;Animat Webitat&rdquo; and &ldquo;You&rdquo; shall be as defined in <a href="../" title="Animat Habitat terms of access.">Terms of Access</a>.</i></p>
+        <p><i>In terms hereunder any reference to &ldquo;Animat Habitat Web page or pages&rdquo; and &ldquo;You&rdquo; shall be as defined in <a href="../" title="Animat Habitat terms of access.">Terms of Access</a>.</i></p>
         <p class="linebreak"><i>The one reference to &ldquo;Animat Boutique&rdquo; shall be as defined in <a href="../terms-of-purchase/" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</i></p>
         <p class="linebreak lineend"><i>Animat Boutique is subject to added terms of use: <a href="../terms-of-use/" title="Animat Habitat terms of use.">Terms of Use</a>.</i></p>
 
         <pre class="thin"></pre>
 
         <h3 class="linebreak">Privacy Policy</h3>
-        <p>Animat Webitat is secured with the open certificate authority <a href="../../url/c/letsencrypt/" rel="noopener" target="_blank" title="Let's Encrypt">Let's Encrypt</a>.</p>
+        <p>Animat Habitat Web pages are secured with the open certificate authority <a href="../../url/c/letsencrypt/" rel="noopener" target="_blank" title="Let's Encrypt">Let's Encrypt</a>.</p>
 
         <h5 class="linebreak title" id="contact-forms"><b>4.1</b> Contact Forms</h5>
-        <p>Animat Webitat may use contact forms for the following purpose(s):</p>
+        <p>Animat Habitat Web pages may use contact forms for the following purpose(s):</p>
 
         <div>
           <ul class="lower-alpha">
@@ -54,10 +54,10 @@
         </div>
 
         <h5 class="linebreak title" id="cookies"><b>4.2</b> Cookies</h5>
-        <p>Animat Webitat does not accept comments on any articles on any website(s) of the organization, and does not set cookies for comments.</p>
+        <p>Animat Habitat Web pages do not accept comments on any articles on any website(s) of the organization, and does not set cookies for comments.</p>
 
         <h5 class="linebreak title" id="embedded-media"><b>4.3</b> Embedded Media</h5>
-        <p>Articles on Animat Webitat may include embedded content:</p>
+        <p>Articles on Animat Habitat Web pages may include embedded content:</p>
 
         <div>
           <ul class="lower-alpha">
@@ -71,7 +71,7 @@
         <p>Embedded content from other websites behaves in the exact same way as if the visitor has visited the other website. These websites may collect data about You, use cookies, embed additional third-party tracking, and monitor interaction with that embedded content, including tracking interaction with the embedded content if You have an account and are logged in to that website.</p>
 
         <h5 class="linebreak title" id="data"><b>4.4</b> Data</h5>
-        <p class="lineend">Animat Webitat does not submit data analytics to any third-party, and believes that your personal data belongs to You. You decide who to share it with. Period.</p>
+        <p class="lineend">Animat Habitat Web pages do not submit data analytics to any third party. Our policy is that your personal data belongs to You. You decide who to share it with. The end.</p>
 
         <pre class="thin"></pre>
 
