--- a/scene/i/book-of-ella-4/index.html
+++ b/scene/i/book-of-ella-4/index.html
@@ -64,7 +64,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.periwinkle.blue/img/~/pixar/the-blue-umbrella.2013.jpg" />
-        <p class="text-right gutter-side"><i>The Blue Umbrella</i> (2013). &copy; PIXAR [<a href="../../../url/www/pixar-the-blue-umbrella/" title="The Blue Umbrella (2013) &copy Pixar" target="_blank" rel="noopener">pixar.com</a>]</p>
+        <p class="text-right gutter-side">Frame from Pixar <i>The Blue Umbrella</i> (short film, 2013) [<a href="../../../url/www/pixar-the-blue-umbrella/" title="Pixar, The Blue Umbrella (2013)" target="_blank" rel="noopener">pixar.com</a>]</p>
 
       </div>
 
@@ -83,7 +83,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.periwinkle.blue/img/~/pixar/the-blue-umbrella.2013.colorscript.jpg" />
-        <p class="text-right gutter-side"><i>The Blue Umbrella</i> (2013), colorscript. &copy; PIXAR [<a href="../../../url/www/pixar-the-blue-umbrella/" title="The Blue Umbrella colorscript (2013) &copy Pixar" target="_blank" rel="noopener">pixar.com</a>]</p>
+        <p class="text-right gutter-side">Colorscript from Pixar <i>The Blue Umbrella</i> (short film, 2013) [<a href="../../../url/www/pixar-the-blue-umbrella/" title="Pixar, The Blue Umbrella colorscript (2013)" target="_blank" rel="noopener">pixar.com</a>]</p>
 
       </div>
 
@@ -109,12 +109,12 @@
       </div>
 
       <div class="clear">
-        <img class="matte-thin" alt="White Elephant color study: &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.color.jpg" />
+        <img class="matte-thin" alt="White Elephant color study: &lsquo;Ella after the storm.&rsquo; &copy; Animat Habitat, 2015." src="../../../inc/img/01/we.ella-after-the-storm.color.jpg" />
         <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; color study (2015)</p>
 
       </div>
 
-      <!-- <img class="matte-thin" alt="White Elephant color study: panorama. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.color.panorama.jpg" />
+      <!-- <img class="matte-thin" alt="White Elephant color study: panorama. &copy; Animat Habitat, 2015." src="../../../inc/img/01/we.color.panorama.jpg" />
       <p class="text-right gutter-side"><i>White Elephant</i> color study: Panorama. (2015)</p> -->
 
       <div>
@@ -127,7 +127,7 @@
       </div>
 
       <div class="clear">
-        <img class="matte-thin" alt="White Elephant &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.jpg" />
+        <img class="matte-thin" alt="White Elephant &lsquo;Ella after the storm.&rsquo; &copy; Animat Habitat, 2015." src="../../../inc/img/01/we.ella-after-the-storm.jpg" />
         <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; (2015)</p>
 
       </div>
