--- a/scene/i/elephant-conservation-amboseli/index.html
+++ b/scene/i/elephant-conservation-amboseli/index.html
@@ -39,7 +39,7 @@
   <section>
     <article>
       <img alt="" src="https://via.animathabitat.org/img/01/photo/~nick-brandt/brandt.2008.amboseli.elephants-walking-through-grass.219114.jpg" />
-      <p class="text-right gutter-side">&ldquo;Elephants Walking Through Grass&rdquo; Amboseli, 2008 (Leading matriarch killed by poachers, 2009) &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
+      <p class="text-right gutter-side">&ldquo;Elephants Walking Through Grass&rdquo; Amboseli, 2008 (Leading matriarch killed by poachers, 2009), photograph courtesy of Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
 
       <div>
         <h4 class="letterhead thin">June 2019</h4>
@@ -54,7 +54,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~nick-brandt/brandt.2007.amboseli.elephant-drinking.219393.jpg" />
-        <p class="text-right gutter-side">&ldquo;Elephant Drinking&rdquo; Amboseli, 2007 (Killed by poachers, 2009) &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
+        <p class="text-right gutter-side">&ldquo;Elephant Drinking&rdquo; Amboseli, 2007 (Killed by poachers, 2009), photograph courtesy of Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
 
       </div>
 
@@ -74,7 +74,7 @@
 
       <div class="clear">
         <iframe src="https://player.vimeo.com/video/215068083?color=ffcf60&title=0&byline=0&portrait=0" class="video-extra" frameborder="0" sandbox="allow-scripts allow-same-origin" allow="autoplay; fullscreen" allowfullscreen></iframe>
-        <p class="text-right gutter-side">&ldquo;Big Life in Action&rdquo; 2014 &copy; Big Life Foundation [<a href="../../../url/-org/biglife-short-films-gallery/" target="_blank" title="Big Life Foundation / Short Films Gallery">biglife.org</a>]</p>
+        <p class="text-right gutter-side">&ldquo;Big Life in Action&rdquo; (short film, 2014), courtesy of Big Life Foundation [<a href="../../../url/-org/biglife-short-films-gallery/" target="_blank" title="Big Life Foundation / Short Films Gallery">biglife.org</a>]</p>
 
       </div>
 
@@ -157,7 +157,7 @@
       </div>
 
       <img alt="" src="https://via.animathabitat.org/img/01/photo/~nick-brandt/brandt.2011.amboseli.line-of-rangers-with-tusks-of-killed-elephants.219252.jpg" />
-      <p class="text-right gutter-side">&ldquo;Line of Rangers with Tusks of Killed Elephants&rdquo; Amboseli, 2011 &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
+      <p class="text-right gutter-side">&ldquo;Line of Rangers with Tusks of Killed Elephants&rdquo;, Amboseli (2011), photograph courtesy of Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
 
       <div>
         <p>Since its foundation in 2010, Big Life has pioneered wildlife conservation on the ground and in publication. Big Life in Kenya (and Tanzania) has a network of community rangers, mostly Maasai &ndash; the heart of conservation in this region is a partnership with the Maasai, who are traditionally a pastoralist society &ndash; Big Life community rangers actively protect the land by fighting against habitat destruction such as illegal logging or charcoaling, and are expertly trained to tackle a variety of wildlife crimes. Big Life in Canada, in the US and in the UK (and around the world) has campaigned in support of wildlife in East Africa with a story of success based on the strength of partnerships with local communities and embodied in the striking photography of co-founder Nick Brandt.</p>
