--- a/scene/i/history-of-elephants/index.html
+++ b/scene/i/history-of-elephants/index.html
@@ -60,7 +60,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>Elephants have a special technique to get at fresh water in the dry season. No other animal has such power. Using their tusks, they pile drive into the floodplain until they reach water below the surface. In doing so, Elephants create a lifeline for others. A hyena and jackal wait their turn.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Domhnall Gleeson. (2016) <i>Earth's Greatest Spectacles</i>, e/3: Okavango. BBC Studios Natural History Unit</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Elephants have a special technique to get at fresh water in the dry season. No other animal has such power. Using their tusks, they pile drive into the floodplain until they reach water below the surface. In doing so, Elephants create a lifeline for others. A hyena and jackal wait their turn.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Domhnall Gleeson, British Broadcasting Corporation <i>Earth's Greatest Spectacles</i> (2016), e&nbsp;3: &lsquo;Okavango&rsquo;</font></h4>
 
         <!-- [bbc.co.uk] bbc.co.uk/programmes/b0717vkv -->
 
@@ -120,7 +120,7 @@
       </div>
 
       <div>
-        <p>Jumbo was not born into superstardom. He was born in Sudan and his mother was killed when he was an infant. He was captured, then exported to a zoo in France, then transferred to <u>London Zoo</u> in England. He was four. He was beaten by the keepers at the zoo at night. This was common practice for elephant keepers. Sixteen or so many years later, the seven-ton adult elephant was ruled to be too big for the zoo, and he was sold to the <u>Barnum &amp; Bailey Circus</u>. Jumbo was bound by chains, confined in a crate, and shipped from England to America. In the circus, he was beaten into submission with sledgehammers, spears and pointed hooks and so on. Jumbo lasted three years in America before his tragic life led to sudden death on the crisscrossed railway tracks of the traveling circus.<sup>[<a class="button" onclick="fn_3();" title="Chambers. p. PT14.">8</a>]</sup></p>
+        <p>Jumbo was not born into superstardom. He was born in Sudan and his mother was killed when he was an infant. He was captured, then exported to a zoo in France, then transferred to <u>London Zoo</u> in England. He was four. He was beaten by the keepers at the zoo at night. This was common practice for elephant keepers. Sixteen or so many years later, the seven-ton adult elephant was ruled to be too big for the zoo, and he was sold to the <u>Barnum &amp; Bailey Circus</u>. Jumbo was bound by chains, confined in a crate, and shipped from England to America. In the circus, he was beaten into submission with sledgehammers, spears and pointed hooks and so on. Jumbo lasted three years in America before his tragic life led to sudden death on the crisscrossed railway tracks of the traveling circus.<sup>[<a class="button" onclick="fn_3();" title="Chambers, p PT14.">8</a>]</sup></p>
 
         <!-- He was simply a good-natured elephant. This was despite a tragic beginning.-->
         <!-- In those few years under the thumb of P. T. Barnum, -->
@@ -141,7 +141,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.earths-greatest-spectacles.3.okavango.jpg" />
-        <p class="text-right gutter-side"><i>Earth's Greatest Spectacles</i> (2016), e/3: &ldquo;Okavango&rdquo; &copy BBC Studios Natural History Unit [<a title="BBC Studios Natural History Unit" href="../../../url/-com/bbcstudios-the-natural-history-unit/" target="_blank" rel="noopener">bbcstudios.com</a>]</p>
+        <p class="text-right gutter-side">Image from <i>Earth's Greatest Spectacles</i> (2016), e&nbsp;3: &ldquo;Okavango&rdquo;, photograph courtesy of BBC Studios Natural History Unit [<a title="BBC Studios Natural History Unit" href="../../../url/-com/bbcstudios-the-natural-history-unit/" target="_blank" rel="noopener">bbcstudios.com</a>]</p>
 
       </div>
 
@@ -155,7 +155,7 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-3">
-          <p class="small"><sup>8</sup>&nbsp; Chambers, P. (2008) &ldquo;Jumbo: The Greatest Elephant in the World.&rdquo; (1st US ed.). Hanover, N.H.: Steerforth Press. p. PT14. ISBN 1586421530. <a href="../../../url/google-books/2WkXkdmLGNoC/" title="Google Books / Jumbo: This Being the True Story of the Greatest Elephant in the World (2008)" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>8</sup>&nbsp; Chambers, P. (2008) &ldquo;Jumbo: The Greatest Elephant in the World.&rdquo; (1st US ed.). Hanover, N.H.: Steerforth Press. p&nbsp;PT14. ISBN 1586421530. <a href="../../../url/google-books/2WkXkdmLGNoC/" title="Google Books / Jumbo: This Being the True Story of the Greatest Elephant in the World (2008)" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
           <p class="small"><sup>9</sup>&nbsp; &ldquo;Jumbo&rdquo; (adj.). Online Etymology Dictionary. <a href="../../../url/etym/jumbo/" title="Online Etymology Dictionary / Jumbo" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
           <p class="small"><sup>10</sup>&nbsp; Collins, G. (1993) &ldquo;Barnum's Jumbo Is Back In Museum's Center Ring.&rdquo; <i>New York Times</i>. <a href="../../../url/time/elephants-barnum-bailey-history/" title="New York Times / 3733595" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
           <p class="small"><sup>11</sup>&nbsp; Ager, S. (2015) &ldquo;As Ringling Ends Circus, See Where Its Elephants Retired.</a>&rdquo; <i>National Geographic</i>. <a href="../../../url/nationalgeographic/ringling-circus-elephants-florida-center/" title="National Geographic / 2015.9.16" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
