--- a/scene/i/reference-art-2/index.html
+++ b/scene/i/reference-art-2/index.html
@@ -56,11 +56,11 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/art/oatley.artcast.jpg" />
-        <p class="text-right gutter-side"><i>Artcast</i> (2008) &copy; Visual Voice [<a href="../../../url/www/chrisoatley-podcasts/" rel="noopener" target="_blank" title="Chris Oatley / Artcast">chrisoatley.com</a>]</p>
+        <p class="text-right gutter-side">Visual Voice <i>Artcast</i> (podcast, 2008) [<a href="../../../url/www/chrisoatley-podcasts/" rel="noopener" target="_blank" title="Chris Oatley / Artcast">chrisoatley.com</a>]</p>
       </div>
 
       <div>
-        <p>Inspiring audio archives like these are invaluable resources for artists seeking their creative voice. In terms of specific breakthroughs on <i>White Elephant</i>, the <i>Artcast</i> podcast episode 49: &lsquo;<a href="../../../url/www/chrisoatley-ep49finefinish/" rel="noopener" target="_blank" title="Chris Oatley / Artcast e/ 49">Projects that Pitch and the Fine Art of Finishing</a>&rsquo; featured Jerzy Drozd, whose conversation with Chris Oatley encapsulated an ever-growing passion for storytelling in comics&mdash;a theme that transcends the Artcast as well as Drozd’s many podcasts and professions (cartoonist and teacher and so on). Any lack of personal history reading comics is quickly overcome by their passion for comic books. They easily convinced me that comics might be an approachable medium for an artist looking to communicate a personal and art directed story.</p>
+        <p>Inspiring audio archives like these are invaluable resources for artists seeking their creative voice. In terms of specific breakthroughs on <i>White Elephant</i>, the <i>Artcast</i> podcast episode 49: &lsquo;<a href="../../../url/www/chrisoatley-ep49finefinish/" rel="noopener" target="_blank" title="Chris Oatley / Artcast / Episode 49">Projects that Pitch and the Fine Art of Finishing</a>&rsquo; featured Jerzy Drozd, whose conversation with Chris Oatley encapsulated an ever-growing passion for storytelling in comics&mdash;a theme that transcends the Artcast as well as Drozd’s many podcasts and professions (cartoonist and teacher and so on). Any lack of personal history reading comics is quickly overcome by their passion for comic books. They easily convinced me that comics might be an approachable medium for an artist looking to communicate a personal and art directed story.</p>
 
       </div>
 
@@ -84,7 +84,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/art/~ryan-woodward/woodward.bottom-of-the-ninth.png" /></a>
-        <p class="text-right gutter-side"><i>Bottom of the Ninth</i> (2012) &copy; Ryan Woodward [<a title="Ryan Woodward / Bottom of the Ninth" href="../../../url/www/ryanwoodwardart-bottom-of-the-ninth/" target="_blank" rel="noopener">ryanwoodwardart.com</a>]</p>
+        <p class="text-right gutter-side">Ryan Woodward <i>Bottom of the Ninth</i> (app, 2012) [<a title="Ryan Woodward / Bottom of the Ninth" href="../../../url/www/ryanwoodwardart-bottom-of-the-ninth/" target="_blank" rel="noopener">ryanwoodwardart.com</a>]</p>
       </div>
 
       <div>
@@ -95,7 +95,7 @@
       </div>
 
       <img alt="" src="https://via.animathabitat.org/img/01/art/~disney-animation/disney.the-lion-king.open.jpg" />
-      <p class="text-right gutter-side"><i>The Lion King</i> (1994) &copy; Disney</p>
+      <p class="text-right gutter-side">Image from Disney <i>The Lion King</i> (1994)</p>
 
       <div>
         <p>Disney animation has inspired, at least indirectly, most of the world of animation. <i>White Elephant</i> is no exception. I use frames that reference sequences from <i>The Lion King</i> (1994).</p>
@@ -106,7 +106,7 @@
       <div class="quote clear-top clear-bottom">
         <div class="quote clear-top clear-bottom">
             <img alt="" src="https://via.animathabitat.org/img/01/art/~disney-nature/disney.living-desert-vanishing-prairie.jpg" />
-            <p class="text-right"><i>The Living Desert, The Vanishing Prairie</i> (1971) &copy; Disney</p>
+            <p class="text-right">Film poster for Disney <i>The Living Desert, The Vanishing Prairie</i> (1971)</p>
 
             <!-- [ca.movieposter.com/q/Living+Desert/Vanishing+Prairie_posters.html] -->
 
