--- a/scene/i/wildlife-documentary-2/index.html
+++ b/scene/i/wildlife-documentary-2/index.html
@@ -57,8 +57,8 @@
       </div>
 
       <div class="clear">
-        <img alt="The Elephant Queen key art (16 by 9)" src="https://via.animathabitat.org/img/01/title/~mark-deeble/apple-tv.the-elephant-queen.key-art.16-9.jpg" />
-        <p class="text-right gutter-side"><i>The Elephant Queen</i> (2018) &copy; Apple TV Plus [<a href="../../../url/-com/theelephantqueen/" title="The Elephant Queen" target="_blank" rel="noopener">theelephantqueen.com</a>]</p>
+        <img alt="" src="https://via.animathabitat.org/img/01/title/~mark-deeble/apple-tv.the-elephant-queen.key-art.16-9.jpg" />
+        <p class="text-right gutter-side"><i>The Elephant Queen</i> (2018), image courtesy of Mark Deeble, Victoria Stone and Apple TV&plus; [<a href="../../../url/-com/theelephantqueen/" title="The Elephant Queen" target="_blank" rel="noopener">theelephantqueen.com</a>]</p>
 
       </div>
 
@@ -121,7 +121,7 @@
 
       <div class="clear">
         <img alt="Into the Okavango title" src="https://via.animathabitat.org/img/01/title/~national-geographic/national-geographic.into-the-okavango.banner.jpg" />
-        <p class="text-right gutter-side"><i>Into the Okavango</i> (2018) &copy; National Geographic Documentary Films [<a href="../../../url/nationalgeographic/into-the-okavango/" title="Into the Okavango (documentary film, 2018)" target="_blank" rel="noopener">films.nationalgeographic.com</a>]</p>
+        <p class="text-right gutter-side"><i>Into the Okavango</i> (2018), title image courtesy of Neil Gelinas and National Geographic Documentary Films [<a href="../../../url/nationalgeographic/into-the-okavango/" title="Into the Okavango (documentary film, 2018)" target="_blank" rel="noopener">films.nationalgeographic.com</a>]</p>
 
       </div>
 
