--- a/scene/i/wildlife-documentary-lens/index.html
+++ b/scene/i/wildlife-documentary-lens/index.html
@@ -52,7 +52,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><i>By wrestling a precious particle of the world from time and space and holding it absolutely still, a great photograph can explode the totality of our world, such that we never see it quite the same again.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Draper, R. &lsquo;The Power of Photography&rsquo;, p.31-32, National Geographic. October 2013. [<a href="../../../url/nationalgeographic/archive-2013-oct/" class="color" rel="noopener" target="_blank" title="">nationalgeographic.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>By wrestling a precious particle of the world from time and space and holding it absolutely still, a great photograph can explode the totality of our world, such that we never see it quite the same again.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Draper, R. &lsquo;The Power of Photography&rsquo;, p&nbsp;31-32, National Geographic, October 2013. [<a href="../../../url/nationalgeographic/archive-2013-oct/" class="color" rel="noopener" target="_blank" title="">nationalgeographic.com</a>]</font></h4>
 
         <!-- [The art of photography] is on this hyper-egalitarian, quasi-Orwellian, all-to-camera-ready terra infirma that National Geographic’s photographers continue to stand out. Why they do so is only partly explained by the innately personal choices (which lens for which lighting for which moment) that help define a photographer’s style. Instead, the very best of their images remind us that a photograph has the power to do infinitely more than document. It can transport us to unseen worlds. -->
 
@@ -62,7 +62,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.4.deserts.p04h64ds.jpg" />
-        <p class="text-right gutter-side">&lsquo;Namibia's arid gravel plains are so incredibly hot that rain often evaporates before it hits the ground.&rsquo; Namibia &ndash; <i>Planet Earth II</i> e/4: &lsquo;Deserts&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
+        <p class="text-right gutter-side">&lsquo;Namibia's arid gravel plains are so incredibly hot that rain often evaporates before it hits the ground.&rsquo; Namibia &ndash; <i>Planet Earth II</i> (2016), e&nbsp;4: &lsquo;Deserts&rsquo;, photograph courtesy of BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
 
@@ -98,7 +98,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.2.mountains.p04fglxx.jpg" />
-        <p class="text-right gutter-side">&lsquo;There may be as few as 3,500 snow leopards left in the wild.&rsquo; Hemis National Park, India &ndash; <i>Planet Earth II</i> e/2: &lsquo;Mountains&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
+        <p class="text-right gutter-side">&lsquo;There may be as few as 3,500 snow leopards left in the wild.&rsquo; Hemis National Park, India &ndash; <i>Planet Earth II</i> (2016), e&nbsp;2: &lsquo;Mountains&rsquo;, photograph courtesy of BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
 
@@ -188,7 +188,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.5.grasslands.p04jjbqm.jpg" />
-        <p class="text-right gutter-side">&lsquo;An African bull elephant swishes his trunk at the carmine bee-eaters following him through the grassland.&rsquo; Botswana &ndash; <i>Planet Earth II</i> e/5: &lsquo;Grasslands&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
+        <p class="text-right gutter-side">&lsquo;An African bull elephant swishes his trunk at the carmine bee-eaters following him through the grassland.&rsquo; Botswana &ndash; <i>Planet Earth II</i> (2016), e&nbsp;5: &lsquo;Grasslands&rsquo;, photograph courtesy of BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
 
@@ -204,7 +204,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.6.cities.p04k7z08.jpg" />
-        <p class="text-right gutter-side">&lsquo;Mark MacEwen filming the macaques.&rsquo; Jaipur, India &ndash; <i>Planet Earth II</i> e/6: &lsquo;Cities&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
+        <p class="text-right gutter-side">&lsquo;Mark MacEwen filming the macaques.&rsquo; Jaipur, India &ndash; <i>Planet Earth II</i> (2016), e&nbsp;6: &lsquo;Cities&rsquo;, photograph courtesy of BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
 
@@ -272,7 +272,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.1.islands.p04dg9p0.jpg" />
-        <p class="text-right gutter-side">&lsquo;Marine iguanas basking in the sun.&rsquo; Fernandina Island, Galapagos &ndash; <i>Planet Earth II</i> e/1: &lsquo;Islands&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
+        <p class="text-right gutter-side">&lsquo;Marine iguanas basking in the sun.&rsquo; Fernandina Island, Galapagos &ndash; <i>Planet Earth II</i> (2016) e&nbsp;1: &lsquo;Islands&rsquo;, photograph courtesy of BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
 
