--- a/scene/i/wildlife-documentary/index.html
+++ b/scene/i/wildlife-documentary/index.html
@@ -62,7 +62,7 @@
 
       <div class="clear">
         <img alt="VIRUNGA title" src="https://via.animathabitat.org/img/01/title/~/virunga.ttl3.jpg" />
-        <p class="text-right gutter-side"><i>Virunga</i> title lettering &copy; Grain Media [<a href="../../../url/-org/virunga/" title="Virunga National Park" target="_blank" rel="noopener">virunga.org</a>]</p>
+        <p class="text-right gutter-side"><i>Virunga</i> (2014), title lettering courtesy of Grain Media [<a href="../../../url/-org/virunga/" title="Virunga National Park" target="_blank" rel="noopener">virunga.org</a>]</p>
 
       </div>
 
@@ -136,7 +136,7 @@
 
       <div class="clear">
         <img alt="Before the Flood banner" src="https://via.animathabitat.org/img/01/title/~national-geographic/national-geographic.before-the-flood.banner.jpg" />
-        <p class="text-right gutter-side"><i>Before the Flood</i> title image &copy; National Geographic Documentary Films [<a href="../../../url/-com/beforetheflood/" title="Before the Flood (documentary film, 2016)" target="_blank" rel="noopener">beforetheflood.com</a>]</p>
+        <p class="text-right gutter-side"><i>Before the Flood</i> (2016), title image courtesy of National Geographic Documentary Films [<a href="../../../url/-com/beforetheflood/" title="Before the Flood (documentary film, 2016)" target="_blank" rel="noopener">beforetheflood.com</a>]</p>
 
       </div>
 
@@ -215,7 +215,7 @@
 
       <div class="clear">
         <img alt="The Ivory Game lockup" src="https://via.animathabitat.org/img/01/title/~/netflix.the-ivory-game.lockup.png" />
-        <p class="text-right gutter-side"><i>The Ivory Game</i> lockup &copy; Vulcan Productions [<a href="../../../url/-com/theivorygame/" title="The Ivory Game (documentary film, 2016)" target="_blank" rel="noopener">theivorygame.com</a>]</p>
+        <p class="text-right gutter-side"><i>The Ivory Game</i> (2016), lockup courtesy of Vulcan Productions [<a href="../../../url/-com/theivorygame/" title="The Ivory Game (documentary film, 2016)" target="_blank" rel="noopener">theivorygame.com</a>]</p>
 
       </div>
 
