--- a/scene/ii/history-of-forests-trees/index.html
+++ b/scene/ii/history-of-forests-trees/index.html
@@ -59,7 +59,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/02/art/~andrew-wyeth/2002.wyeth.the-carry.jpg" />
-        <p class="text-right gutter-side"><i>The Carry</i> (2002) &copy; Andrew Wyeth [<a href="../../../url/www/andrewwyeth/" rel="noopener" target="_blank" title="Andrew Wyeth">andrewwyeth.com</a>]</p>
+        <p class="text-right gutter-side"><i>The Carry</i> (tempera, 2002), painting courtesy of Andrew Wyeth [<a href="../../../url/www/andrewwyeth/" rel="noopener" target="_blank" title="Andrew Wyeth">andrewwyeth.com</a>]</p>
 
       </div>
 
@@ -77,7 +77,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/02/art/~robert-bateman/1981.bateman.above-the-river-trumpeter-swans.jpg" />
-        <p class="text-right gutter-side"><i>Above the River &ndash; Trumpeter Swans</i> (1981) &copy; Robert Bateman [<a href="../../../url/-com/www/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>]</p>
+        <p class="text-right gutter-side"><i>Above the River &ndash; Trumpeter Swans</i> (1981), painting courtesy of Robert Bateman [<a href="../../../url/-com/www/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>]</p>
 
       </div>
 
@@ -163,13 +163,13 @@
 
         <div class="clear-bottom">
           <img alt="" src="https://via.animathabitat.org/img/02/art/~robert-bateman/1990.bateman.midnight-black-wolf.jpg" />
-          <p class="text-right"><i>Midnight &ndash; Black Wolf</i> (acrylic color, 1989) &copy; Robert Bateman [<a href="../../../url/-ca/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, grayscale]</p>
+          <p class="text-right"><i>Midnight &ndash; Black Wolf</i> (acrylic color, 1989), painting courtesy of Robert Bateman [<a href="../../../url/-ca/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, grayscale]</p>
 
         </div>
 
         <div class="clear-bottom">
           <img alt="" src="https://via.animathabitat.org/img/02/art/~robert-bateman/2005.bateman.white-encounter.jpg" />
-          <p class="text-right"><i>White Encounter</i> (acrylic color, 2005) &copy; Robert Bateman [<a href="../../../url/-ca/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, grayscale]</p>
+          <p class="text-right"><i>White Encounter</i> (acrylic color, 2005), painting courtesy of Robert Bateman [<a href="../../../url/-ca/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, grayscale]</p>
 
         </div>
 
@@ -222,13 +222,13 @@
 
       <div class="color quote">
 
-        <h4><font class="color text-quote">&ldquo;</font><i>This is the home of an animal so rare, it is almost mythical. An Amur tiger. There are fewer than six hundred of them. [&hellip;] A male Siberian tiger patrols a territory of almost two-thousand square kilometres, and it has to do so if it is to find enough prey to keep itself alive through the long winter. This is an impoverished land, where food of any kind is scarce. [&hellip;] Poaching has taken the Siberian tiger to the brink of extinction, but since the 1980s their numbers have slowly increased. [Their] future still depends on having vast areas of forest in which to hunt.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough, <i>Our Planet</i> e/8: &lsquo;Forests&rsquo; (2019) Netflix</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>This is the home of an animal so rare, it is almost mythical. An Amur tiger. There are fewer than six hundred of them. [&hellip;] A male Siberian tiger patrols a territory of almost two-thousand square kilometres, and it has to do so if it is to find enough prey to keep itself alive through the long winter. This is an impoverished land, where food of any kind is scarce. [&hellip;] Poaching has taken the Siberian tiger to the brink of extinction, but since the 1980s their numbers have slowly increased. [Their] future still depends on having vast areas of forest in which to hunt.</i>&nbsp;<font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough, Netflix <i>Our Planet</i> (2019), e&nbsp;8: &lsquo;Forests&rsquo;</font></h4>
 
       </div>
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/02/photo/~kieran-o-donovan/silverback-films.our-planet.8.forests.2019.jpg" />
-        <p class="text-right gutter-side">&lsquo;Amur tiger caught on camera trap in the boreal forests of Russia's Pacific Coast&rsquo; by Kieran O'Donovan, <i>Our Planet</i> e/8: &lsquo;Forests&rsquo; (2019) &copy; Silverback Films, Netflix [<a href="../../../url/-com/ourplanet/" rel="noopener" target="_blank" title="Our Planet (2019)">ourplanet.com</a>]</p>
+        <p class="text-right gutter-side">&lsquo;Amur tiger caught on camera trap in the boreal forests of Russia's Pacific Coast&rsquo;, Netflix <i>Our Planet</i> (2019), e&nbsp;8: &lsquo;Forests&rsquo;, photograph courtesy of Kieran O'Donovan and Silverback Films [<a href="../../../url/-com/ourplanet/" rel="noopener" target="_blank" title="Our Planet (2019)">ourplanet.com</a>]</p>
 
       </div>
 
