--- a/scene/ii/the-beginning-of-painting/index.html
+++ b/scene/ii/the-beginning-of-painting/index.html
@@ -98,8 +98,8 @@
         <p class="linebreak">Consider blending colored crayons, or pencils, or pastels or gouaches and so on. A pure red and a pure yellow will blend into a range of oranges. A pure yellow and a pure blue will blend into a range of greens. A pure blue and a pure red will blend into a range of dark, neutral purples and violets. Oil colors will blend just the same. The reason is that these mediums have all been set with the same pigments. This color study has used only the three primary pigments, with white. This is an exercise of the range of a traditional primary color palette, painted with Pébéo oil colors on a 9 by 7 inch canvas board.</p>
       </div>
 
-      <img alt="Cadmium Red, Cadmium Yellow, Pthalo Blue, with Titanium White &copy; 2020 Dane Aleksander" src="../../../inc/img/02/the-beginning-of-painting.study.red-yellow-blue.1280.jpg" />
-      <p class="text-right gutter-side">&ldquo;Cadmium Red, Cadmium Yellow, Pthalo Blue, with Titanium White&rdquo; (2020) Dane Aleksander</p>
+      <img alt="Cadmium Red, Cadmium Yellow, Pthalo Blue, with Titanium White by Dane Aleksander, 2020." src="../../../inc/img/02/the-beginning-of-painting.study.red-yellow-blue.1280.jpg" />
+      <p class="text-right gutter-side">&ldquo;Cadmium Red, Cadmium Yellow, Pthalo Blue, with Titanium White&rdquo; (acrylic, 2020) &copy; Dane Aleksander</p>
 
       <div>
         <p>The question of a palette, for a painter, signifies access to color.</p>
@@ -112,7 +112,7 @@
 
       <div class="clear">
         <img alt="" src="https://via.animathabitat.org/img/02/color/~gamblin-artist-colors/gamblin.studionotes.min.mod10.jpg" />
-        <p class="gutter-side text-right">Classical colors, Impressionist colors, Modern colors &copy; Gamblin [<a href="../../../url/-com/gamblincolors/" rel="noopener" target="_blank" title="Gamblin">gamblincolors.com</a>]</p>
+        <p class="gutter-side text-right">Classical colors, Impressionist colors, Modern colors courtesy of Gamblin [<a href="../../../url/-com/gamblincolors/" rel="noopener" target="_blank" title="Gamblin">gamblincolors.com</a>]</p>
 
       </div>
 
@@ -144,7 +144,7 @@
       </div>
 
       <div class="clear">
-        <p class="gutter-side text-right">Old Masters palette, Impressionist palette, Basic High Key palette &copy; Gamblin <a href="../../../url/-com/gamblincolors-artist-grade-oil-colors/" rel="noopener" target="_blank" title="Gamblin / Artist Grade Oil Colors">gamblincolors.com</a></p>
+        <p class="gutter-side text-right">Old Masters palette, Impressionist palette, Basic High Key palette courtesy of Gamblin <a href="../../../url/-com/gamblincolors-artist-grade-oil-colors/" rel="noopener" target="_blank" title="Gamblin / Artist Grade Oil Colors">gamblincolors.com</a></p>
 
       </div>
 
@@ -192,7 +192,7 @@
       </div>
 
       <div class="clear">
-        <p class="gutter-side text-right">Quinacridone Magenta sample, Cadmium Lemon sample, Cobalt Teal sample &copy; Gamblin [<a href="../../../url/-com/gamblincolors-artist-grade-oil-colors/" rel="noopener" target="_blank" title="Gamblin / Artist Grade Oil Colors">gamblincolors.com</a>]</p>
+        <p class="gutter-side text-right">Quinacridone Magenta sample, Cadmium Lemon sample, Cobalt Teal sample courtesy of Gamblin [<a href="../../../url/-com/gamblincolors-artist-grade-oil-colors/" rel="noopener" target="_blank" title="Gamblin / Artist Grade Oil Colors">gamblincolors.com</a>]</p>
 
       </div>
 
